--- a/index.html
+++ b/index.html
@@ -21,8 +21,46 @@
             '', '', '',
             '', '', ''
         ]
+        let jogadorDaVez = "X";
+
+        function verificaJogada(posicao1, posicao2, posicao3) {
+            if (jogadas[posicao1] == "" ||
+                jogadas[posicao2] == "" ||
+                jogadas[posicao3] == ""
+            )
+                return false
+            return (
+                jogadas[posicao1] == jogadas[posicao2] &&
+                jogadas[posicao2] == jogadas[posicao3]
+            );
+        }
+
+        function verificaGanhador() {
+            if (
+                //linhas
+                verificaJogada(0, 1, 2) ||
+                verificaJogada(3, 4, 5) ||
+                verificaJogada(6, 7, 8) ||
+                //colunas
+                verificaJogada(0, 3, 6) ||
+                verificaJogada(1, 4, 7) ||
+                verificaJogada(2, 5, 8) ||
+                //diagonais
+                verificaJogada(0, 4, 8) ||
+                verificaJogada(2, 4, 6)
+            )
+                alert("fim de jogo")
+        }
+
         function fazerJogada(posicao) {
-            jogadas[posicao] = "X";
+            jogadas[posicao] = jogadorDaVez;
+
+            if (jogadorDaVez == "X")
+                jogadorDaVez = "O"
+            else
+                jogadorDaVez = "X"
+
+            verificaGanhador();
             desenhaBotoes();
         }
         function desenhaBotoes() {
